<resources>

    <string name="app_name">YouTube AdAway</string>
    <string name="module_active">The module is active!</string>
    <string name="module_inactive">The module is NOT active!\nMake sure it is enabled and REBOOT.</string>
    <string name="donate">Donate</string>
    <string name="donate_btc_title">Donate BTC</string>
    <string name="donate_pp_title">Donate through Paypal</string>
    <string name="ads_removal">Ads removal</string>
    <string name="invideo_ads_summary">Disable playing ads while watching a video</string>
    <string name="invideo_ads_removal">Disable InVideo ads</string>
    <string name="ad_cards_summary">This is experimental and may break back gesture and pull down to refresh feature!</string>
    <string name="ad_cards_removal">Remove ad cards</string>
    <string name="module_status">Module status</string>
    <string name="bg_playback">Background playback</string>
    <string name="bg_playback_summary">Enable video background playback</string>

</resources>